 * T.38 gateway functionality has been added to res_fax (and res_fax_spandsp).
   Set FAXOPT(gateway)=yes to enable this functionality on a channel. This
   feature will handle converting a fax call between an audio T.30 fax terminal
   and an IFP T.38 fax terminal.

SIP Changes
-----------
 * Add T38 support for REJECTED state where T.38 Negotiation is explicitly rejected.

Queue changes
-------------
 * Added general option negative_penalty_invalid default off. when set
   members are seen as invalid/logged out when there penalty is negative.
   for realtime members when set remove from queue will set penalty to -1.
 * Added queue option autopausedelay when autopause is enabled it will be
   delayed for this number of seconds since last successful call if there
   was no prior call the agent will be autopaused immediately.
 * Added member option ignorebusy this when set and ringinuse is not
   will allow per member control of multiple calls as ringinuse does for
   the Queue.

Applications
------------
 * Added 'v' option to MeetMe to play voicemail greetings when a user joins/leaves
   a MeetMe conference
 * Added 'k' option to MeetMe to automatically kill the conference when there's only
   one participant left (much like a normal call bridge)

Asterisk Database
-----------------
 * The internal Asterisk database has been switched from Berkeley DB 1.86 to
   SQLite 3. An existing Berkeley astdb file can be converted with the astdb2sqlite3
   utility in the UTILS section of menuselect. If an existing astdb is found and no
   astdb.sqlite3 exists, astdb2sqlite3 will be compiled automatically. Asterisk will
   convert an existing astdb to the SQLite3 version automatically at runtime.

Asterisk Modules
----------------
 * Modules marked as deprecated are no longer marked as building by default. Enabling
   these modules is still available via menuselect.

IAX2 Changes
------------
* authdebug is now disabled by default. To enable this functionaility again